<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.crowdstreaming.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">


    </fragment>


    <fragment
        android:id="@+id/nav_streaming"
        android:name="com.crowdstreaming.ui.streaming.StreamingFragment"
        android:label="@string/menu_streaming"
        tools:layout="@layout/fragment_streaming" />

    <fragment
        android:id="@+id/nav_avaliables"
        android:name="com.crowdstreaming.ui.avaliablesstreamings.AvaliablesStreamingsFragment"
        android:label="@string/menu_avaliables"
        tools:layout="@layout/fragment_avaliables" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.crowdstreaming.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_gateway"
        android:name="com.crowdstreaming.ui.gateway.GatewayFragment"
        android:label="@string/menu_gateway"
        tools:layout="@layout/fragment_gateway" />

</navigation>